# Lattice_FFT

./: .gitignore  FFT and lattice.ipynb  QUICKSTART.md  README.md  demo.ipynb  lattice_fft_demo.ipynb  pyproject.toml  setup.py
lattice_fft/: __init__.py  atoms.py  config.py  fft_utils.py  lattice.py  lattices.py  plotting.py  simulation.py  visualization.py
