[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-fft"
version = "0.2.0"
description = "Utilities for simulating 2D lattices and their FFT signatures"
authors = [{name = "EigenJames"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/EigenJames/Lattice_FFT"
